modified:   notebooks/DeepLearning_GridSearch.ipynb 	modified:   notebooks/DeepLearning_GridSearch_Att.ipynb 	modified:   notebooks/core/net_list.py 	modified:   notebooks/core/parameters.py 	modified:   notebooks/preprocess/preprocess.py

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
-notebooks/common/__pycache__/
-notebooks/.ipynb_checkpoints/
-notebooks/core/__pycache__/
+.ipynb_checkpoints
+__pycache__
 notebooks/runs/
 data/
